@@ -27,9 +27,7 @@ AC_HAVE_FUNCS(re_comp)
 AC_HEADER_EGREP(time_t, sys/types.h, AC_DEFINE(POSIX_TYPES))
 HAS_ANSI_VOLATILE
 AC_DEFINE(AN_TO_LN_RULES)
-USE_ANAME
-V5_USE_SHARED_LIB
-KRB5_LIBRARIES
+KRB5_BUILD_PROGRAM
 KRB5_RUN_FLAGS
 KRB5_BUILD_LIBOBJS
 V5_AC_OUTPUT_MAKEFILE
