@@ -1,3 +1,8 @@
+Thu Feb  6 15:46:24 1997  Tom Yu  <tlyu@mit.edu>
+
+	* Makefile.in:
+	* configure.in: Update to new program build procedure.
+
 Thu Jan  2 17:19:11 1997  Tom Yu  <tlyu@mit.edu>
 
 	* configure.in: Update to new library build procedure.
